きれいにしました

--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web 1920 – 1</title>
+<title>SFC Union Vote</title>
 <link rel="stylesheet" type="text/css" id="applicationStylesheet" href="stylesheets.css"/>
-<script id="applicationScript" type="text/javascript" src="index.js"></script>
 </head>
 <body>
-<div id="Web_1920__1">
-	<div id="SFC__Coming_soon">
+<div id="wrapper">
+	<div id="title">
 		<span>SFC生総会 投票ページ<br/>Coming soon…</span>
 	</div>
-	<div id="n_022_Shonan_Student_Union">
-		<span>©2022 Shonan Student Union</span>
-	</div>
-	<div id="n_1020__1027__">
+	<div id="detail">
 		<span>投票期間 10/20 ~ 10/27<br/>投票方法 学生証による認証システム</span>
+	</div>
+	<div id="copyright">
+		<span>©2022 Shonan Student Union</span>
 	</div>
 </div>
 </body>
