整えました

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 <div id="wrapper">
 	<div id="title">
-		<span>SFC生総会 投票ページ<br/>Coming soon…</span>
+		<p>SFC生総会 投票ページ<br/>Coming soon…</p>
 	</div>
 	<div id="detail">
-		<span>投票期間 10/20 ~ 10/27<br/>投票方法 学生証による認証システム</span>
+		<p>投票期間 10/20 ~ 10/27<br/>投票方法 学生証及びkeio.jpによる認証システム</p>
 	</div>
 	<div id="copyright">
-		<span>©2022 Shonan Student Union</span>
+		<p>©2022 Shonan Student Union</p>
 	</div>
 </div>
 </body>
