--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<p>SFC生総会 投票ページ<br/>Coming soon…</p>
 	</div>
 	<div id="detail">
-		<p>投票期間 10/20 ~ 10/27<br/>投票方法 学生証及びkeio.jpによる認証システム</p>
+		<p>議決権行使期間 10/25 ~ 10/31<br/>投票方法 学生証及びkeio.jpによる認証システム</p>
 	</div>
 	<div id="copyright">
 		<p>©2022 Shonan Student Union</p>
